Searching Implemented!!!!!!!!!!! Still need to find a way to minimize firebase reads while searching The database tables for conversations, suggested, cross reference also implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.main.fragments.profile.ProfileActivity" />
+
         <service
             android:name="com.abhishekjagushte.engage.notifications.NotificationHandler"
             android:exported="false">
