--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,39 +3,30 @@
     package="com.abhishekjagushte.engage">
 
     <application
+        android:name=".EngageApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".EngageApplication"
         android:theme="@style/AppTheme">
-        <activity android:name="com.abhishekjagushte.engage.ui.setup.SetupActivity"></activity>
-        <activity android:name=".SplashScreen">
+
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <nav-graph android:value="@navigation/main_activity_nav_graph"/>
         </activity>
-        <activity android:name="com.abhishekjagushte.engage.ui.main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".ui.main.fragments.profile.ProfileActivity" />
 
         <service
-            android:name="com.abhishekjagushte.engage.notifications.NotificationHandler"
+            android:name=".notifications.NotificationHandler"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-
     </application>
+
 </manifest>
