--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
-    ext.nav_version = '2.3.0-alpha05'
+    ext.nav_version = '2.3.0-beta01'
 
     repositories {
         google()
