--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,13 @@ dependencies {
     def room_version = "2.2.5"
     def lifecycle_version = "2.2.0"
     def dagger_version = "2.27"
+    def paging_version = "2.1.2"
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -80,7 +82,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
 
     //Firebase Cloud Messaging
-    implementation 'com.google.firebase:firebase-messaging:20.2.3'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
 
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.5'
@@ -103,5 +105,9 @@ dependencies {
 
     //Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // For Kotlin use paging-runtime-ktx
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
 
 }
