--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,31 +42,32 @@ dependencies {
 
     def room_version = "2.2.5"
     def lifecycle_version = "2.2.0"
-    def dagger_version = "2.27"
+    def dagger_version = "2.28"
     def paging_version = "2.1.2"
+    def work_version = "2.4.0"
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Firebase Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
     //Firebase Auth
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
 
     //Firebase callable functions
-    implementation 'com.google.firebase:firebase-functions:19.0.2'
+    implementation 'com.google.firebase:firebase-functions:19.1.0'
 
     //Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -79,7 +80,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     //Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.6.0'
 
     //Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
@@ -108,6 +109,9 @@ dependencies {
 
     // For Kotlin use paging-runtime-ktx
     implementation "androidx.paging:paging-runtime:$paging_version"
+
+    //Workmanager
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
 
 }
