--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     defaultConfig {
         applicationId "com.abhishekjagushte.engage"
         minSdkVersion 24
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -64,7 +64,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
     //Firebase Auth
-    implementation 'com.google.firebase:firebase-auth:20.0.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
 
     //Firebase callable functions
     implementation 'com.google.firebase:firebase-functions:19.1.0'
@@ -108,7 +108,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // For Kotlin use paging-runtime-ktx
-    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     //Workmanager
     implementation "androidx.work:work-runtime-ktx:$work_version"
@@ -116,5 +116,11 @@ dependencies {
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation platform('com.google.firebase:firebase-bom:26.1.1')
 }
