--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,4 +123,6 @@ dependencies {
     //Firebase Storage
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
+
+    implementation "com.leinardi.android:speed-dial:3.1.1"
 }
