Started implementing Event reminder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,4 +125,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
 
     implementation "com.leinardi.android:speed-dial:3.1.1"
+
+    //Moshi JSON converter
+    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
 }
