Reminder implemented partially, acknowledgment remaining

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
             android:authorities="${applicationId}.workmanager-init"
             tools:node="remove" />
 
+        <receiver android:name=".broadcastreceiver.AlarmReceiver"/>
+        
     </application>
 
 </manifest>
