--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: "scabbard.gradle"
 
 android {
     compileSdkVersion 30
@@ -16,6 +17,10 @@ android {
     }
 
     dataBinding {
+        enabled = true
+    }
+
+    scabbard {
         enabled = true
     }
 
@@ -40,11 +45,11 @@ android {
 
 dependencies {
 
-    def room_version = "2.2.5"
-    def lifecycle_version = "2.2.0"
-    def dagger_version = "2.28"
-    def paging_version = "2.1.2"
-    def work_version = "2.4.0"
+    def room_version = "2.3.0"
+    def lifecycle_version = "2.3.1"
+    def dagger_version = "2.28.3"
+    def paging_version = "3.0.0"
+    def work_version = "2.6.0-alpha02"
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -54,20 +59,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Firebase Analytics
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
 
     //Firebase Auth
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.0'
 
     //Firebase callable functions
-    implementation 'com.google.firebase:firebase-functions:19.1.0'
+    implementation 'com.google.firebase:firebase-functions:20.0.0'
 
     //Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -80,7 +84,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     //Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx:22.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.0'
 
     //Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
@@ -90,13 +94,11 @@ dependencies {
 
     //lifecycle helpers
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     //Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
@@ -117,17 +119,17 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Firebase Storage
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
 
     //Profile Photo
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
 
 
