--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.20'
-    ext.nav_version = '2.3.2'
+    ext.kotlin_version = '1.4.31'
+    ext.nav_version = '2.3.5'
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
     }
+
+
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
+        classpath "gradle.plugin.dev.arunkumar:scabbard-gradle-plugin:0.4.0"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,9 +29,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
         maven { url "https://jitpack.io" }
-        
+        mavenCentral()
+        jcenter()
     }
 }
 
